results/SVCOMP/4-shot/log-fcmpx_dcmpx1-2024_03_18_23_19_59.txt
class Main {
    //@ requires args != null;
    //@ ensures \result == \old(\result);
    public static void main(String[] args) {
        float f = 2.5f;
        assert f == 2.5f;
        assert f < 3.0f;
        assert f > 2.0f;
        double d = 2.5;
        assert d == 2.5;
        assert d < 3.0;
        assert d > 2.0;
    }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result == \old(\result);
                 ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result == \old(\result);
                                 ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: A \result expression is not allowed in an old environment
    //@ ensures \result == \old(\result);
                                ^
3 errors

